// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`integration with apollo-server alias with fragment works 1`] = `
request:1
   finished: true

+-- a:2
      finished: true

   +-- dos:3
         finished: true


`;

exports[`integration with apollo-server alias works 1`] = `
request:1
   finished: true

+-- a:2
      finished: true

   +-- uno:3
         finished: true

   +-- two:4
         finished: true


`;

exports[`integration with apollo-server correct span nesting 1`] = `
request:1
   finished: true

+-- a:2
      finished: true

   +-- one:3
         finished: true

   +-- two:4
         finished: true


`;

exports[`integration with apollo-server does not start a field resolver span if the parent field resolver was not traced 1`] = `
request:1
   finished: true

+-- b:2
      finished: true

   +-- four:3
         finished: true


`;

exports[`integration with apollo-server implements traces for arrays 1`] = `
request:1
   finished: true

+-- as:2
      finished: true

   +-- one:3
         finished: true

   +-- two:4
         finished: true

   +-- one:5
         finished: true

   +-- two:6
         finished: true

   +-- one:7
         finished: true

   +-- two:8
         finished: true


`;
